FDG-5405 Added dynamic width, adjusted chart perimeter and margin, fixed callout font, changed mobile spacing

--- a/src/layouts/explainer/sections/national-debt/national-debt.module.scss
+++ b/src/layouts/explainer/sections/national-debt/national-debt.module.scss
@@ -137,6 +137,7 @@
 
 
 .growingNationalDebtSectionGraphContainer, .debtBreakdownSectionGraphContainer, .debtTrendsOverTimeSectionGraphContainer {
+  //max-width: 31.5rem;
   background-color: $body-background;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -200,9 +201,8 @@
 
   .lineChartContainer {
     width: 100%;
-    max-width: 31.5rem;
-    margin: 0 auto;
-    height: 400px;
+    aspect-ratio: 1 / 1;
+    height: 440px;
   }
 
   @media screen and (max-width: $breakpoint-lg - 1) {
@@ -213,7 +213,7 @@
 
   @media screen and (max-width: $breakpoint-sm - 1) {
     .lineChartContainer {
-      height: 227px;
+      height: 240px;
     }
   };
 
@@ -454,7 +454,45 @@
     }
   }
 
-  .growingNationalDebtSectionGraphContainer, .debtBreakdownSectionGraphContainer, .debtTrendsOverTimeSectionGraphContainer {
+  .debtTrendsOverTimeSectionGraphContainer {
+    font-size: $font-size-10;
+    padding: 14px;
+
+    .headerContainer {
+      margin-bottom: 1.25rem;
+    }
+
+    .title {
+      font-size: $font-size-12;
+    }
+
+    .subTitle {
+      font-size: $font-size-12;
+    }
+
+    .titleBreakdown {
+      font-size: $font-size-12;
+    }
+
+    .header {
+      font-size: $font-size-24;
+      min-width: 110px;
+    }
+
+    .subHeader {
+      font-size: $font-size-10;
+    }
+
+    .footerContainer {
+      padding-top: 0;
+
+      p {
+        font-size: $font-size-12;
+      }
+    }
+  }
+
+  .growingNationalDebtSectionGraphContainer, .debtBreakdownSectionGraphContainer {
     font-size: $font-size-10;
     padding: 14px;
 
